# torch-ldsc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: Berea500.pgm  model.pt  out.pbm
src/: Net.hpp  RockDataset.cpp  RockDataset.hpp  RockImageRGBDataset.hpp  TorchLDSCApp.cpp  TorchLDSCApp.hpp  main.cpp
src/RockImageRGB/: CMakeLists.txt  RockImageRGB.cpp  RockImageRGB.hpp
src/RockImageRGB/RockImageRGBDataset/: RockImageRGBDataset.cpp  RockImageRGBDataset.hpp
src/RockImageRGB/RockImageRGBNet/: CMakeLists.txt  RockImageRGBNet.cpp
src/RockImageRGB/RockImageRGBTesting/: CMakeLists.txt  RockImageRGBTesting.hpp
src/RockImageRGB/RockImageRGBTraining/: RockImageRGBTraining.hpp
src/RockImageRGBDataset/: CMakeLists.txt  RockImageRGBDataset.cpp  RockImageRGBDataset.hpp
src/RockImageRGBNet/: RockImageRGBNet.hpp
src/RockImageRGBTesting/: RockImageRGBTesting.cpp  RockImageRGBTesting.hpp
src/RockImageRGBTraining/: CMakeLists.txt  RockImageRGBTraining.cpp  RockImageRGBTraining.hpp
src/utils/: utils.cpp  utils.hpp
